# quiz_app

./: .env.example  pyproject.toml
quiz_app/: main.py  wiki.py
